--- a/Frontend/learning-management-system/package.json
+++ b/Frontend/learning-management-system/package.json
@@ -10,9 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/material": "^6.1.10",
+    "@mui/x-data-grid": "^7.23.1",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "learning-management-system": "file:",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
+    "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
